--- a/cssBayan/index.html
+++ b/cssBayan/index.html
@@ -15,7 +15,7 @@
             <input class="acardeon-input" type="checkbox" id="acardeon-1">
             <label class="acardeon-title" for="acardeon-1">Я купил WebStorm тем временем я...</label>
             <div class="acardeon-mem">
-                <img src="../bayan/img/mem-1.jpg" alt="mem-1">
+                <img src="img/mem-1.jpg" alt="mem-1">
             </div>
         </div>
 
@@ -23,7 +23,7 @@
             <input class="acardeon-input" type="checkbox"  id="acardeon-2">
             <label class="acardeon-title" for="acardeon-2">Так то я програмист</label>
             <div class="acardeon-mem">
-                <img src="../bayan/img/mem-2.jpg" alt="mem-2">
+                <img src="img/mem-2.jpg" alt="mem-2">
             </div>
         </div>
 
@@ -31,7 +31,7 @@
             <input class="acardeon-input" type="checkbox"  id="acardeon-3">
             <label class="acardeon-title" for="acardeon-3">Почему ты не можешь найти работу после Java и C#?</label>
             <div class="acardeon-mem">
-                <img src="../bayan/img/mem-3.jpg" alt="mem-3">
+                <img src="img/mem-3.jpg" alt="mem-3">
             </div>
         </div>
 
@@ -39,7 +39,7 @@
             <input class="acardeon-input" type="checkbox"  id="acardeon-4">
             <label class="acardeon-title" for="acardeon-4">Может во фулстэк нырнуть?</label>
             <div class="acardeon-mem">
-                <img src="../bayan/img/mem-4.jpg" alt="mem-4">
+                <img src="img/mem-4.jpg" alt="mem-4">
             </div>
         </div>
     </div>
